--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<h1>hello github </h1>
-<style>
-  h1{
-    color:red;
-  }
-</style>
+<html>
+  <head>
+    <title>hi github pages</title>
+    <style>
+      html{
+        background-color:#f0f0f0;
+      }
+      h1{
+        color:pink;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>hi github pages</h1>
+  </body>
+</html>
